--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "cryptiles": "^4.1.3",
     "express": "^4.16.4",
     "favicon": "0.0.2",
     "mongoose": "^5.3.14",
